force-app/main/default/objects/GoLives__c/GoLives__c.object-meta.xml
<CustomObject>
    <description>Custom object to capture go lives per account</description>
    <label>Go-Live</label>
    <nameField>
        <displayFormat>GL-{0000}</displayFormat>
        <label>Go-Live Names</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Go-Lives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>