force-app/main/default/objects/GoLives__c/fields/Actual_GoLive_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_GoLive_Date__c</fullName>
    <description>The calendar date on which the GoLive took place</description>
    <inlineHelpText>The calendar date on which the GoLive took place Due to shifts in scope and timeline, the actual go live date may not always occur on the original go live date</inlineHelpText>
    <label>Actual Go-Live Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>