force-app/main/default/objects/GoLives__c/fields/Detailed_GoLive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Detailed_GoLive_Reason__c</fullName>
    <description>Provide detailed explanation of the Go-Live reason</description>
    <inlineHelpText>Provide detailed explanation of the Go-Live reason</inlineHelpText>
    <label>Detailed Go-Live Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>