force-app/main/default/objects/GoLives__c/fields/Go_Live_Notes__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Notes__c</fullName>
    <description>This field is used to captured miscellaneous notes and context related to the associated Go-Live</description>
    <inlineHelpText>This field is used to captured miscellaneous notes and context related to the associated Go-Live. Please include date and initials when providing an update (i.e. 8/21/20 JS)</inlineHelpText>
    <label>Go-Live Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>