force-app/main/default/objects/GoLives__c/fields/Number_of_Go_Live_Changes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Go_Live_Changes__c</fullName>
    <description>Captures the quantity/number of times a Go-Live date is rescheduled before the Go-Live actually occurs</description>
    <inlineHelpText>Captures the quantity/number of times a Go-Live date is rescheduled before the Go-Live actually occurs</inlineHelpText>
    <label>Number of Go-Live Changes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>