force-app/main/default/objects/GoLives__c/fields/Number_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users__c</fullName>
    <description>The number/quantity of users that are being enabled by the associated Go-Live</description>
    <inlineHelpText>The number/quantity of users that are being enabled by the associated Go-Live</inlineHelpText>
    <label>Number of Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>