force-app/main/default/objects/GoLives__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Opportunity associated to the GoLive</description>
    <inlineHelpText>If applicable, the Opportunity associated to the GoLive</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Go-Lives</relationshipLabel>
    <relationshipName>GoLives</relationshipName>
    <type>Lookup</type>
</CustomField>