force-app/main/default/objects/GoLives__c/fields/Original_GoLive_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_GoLive_Date__c</fullName>
    <description>What was the date the go live was originally scheduled to occur?</description>
    <inlineHelpText>What was the date the go live was originally scheduled to occur?</inlineHelpText>
    <label>Original Go-Live Date</label>
    <type>Date</type>
</CustomField>