force-app/main/default/objects/GoLives__c/fields/Primary_GoLive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_GoLive_Reason__c</fullName>
    <description>What is the primary reason the GoLive is taking place?</description>
    <inlineHelpText>What is the primary reason the GoLive is taking place?</inlineHelpText>
    <label>Primary Go-Live Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Migration Event</fullName>
            </value>
            <value>
                <fullName>Enhancements</fullName>
            </value>
            <value>
                <fullName>Market Release</fullName>
            </value>
            <value>
                <fullName>Regional GoLive</fullName>
            </value>
            <value>
                <fullName>Product Release</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>