force-app/main/default/objects/GoLives__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>What product(s) are going live on this date?</description>
    <inlineHelpText>What product(s) are going live on this date?</inlineHelpText>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>BOSS - Sales Cloud</fullName>
            </value>
            <value>
                <fullName>BOSS - CPQ &amp; Billing</fullName>
            </value>
            <value>
                <fullName>BOSS - CPQ</fullName>
            </value>
            <value>
                <fullName>CLM</fullName>
            </value>
            <value>
                <fullName>Communitites</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>CPQ &amp; Billing</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Middleware</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Sales Performance Management</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Q2C</fullName>
            </value>
            <value>
                <fullName>Vista_BOSS_App</fullName>
                <isActive>false</isActive>
                <label>Vista BOSS App</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>