force-app/main/default/objects/GoLives__c/fields/Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Details__c</fullName>
    <description>If you chose the value &quot;Other&quot; in the field &quot;Product&quot; please provide details around what product(s) are going live</description>
    <inlineHelpText>If you chose the value &quot;Other&quot; in the field &quot;Product&quot; please provide details around what product(s) are going live</inlineHelpText>
    <label>Product Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>