force-app/main/default/objects/GoLives__c/fields/Project_Closure__c.field-meta.xml
<CustomField>
    <fullName>Project_Closure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is there a project closure associated to this GoLive?</description>
    <inlineHelpText>Is there a project closure associated to this GoLive?</inlineHelpText>
    <label>Project Closure</label>
    <type>Checkbox</type>
</CustomField>