force-app/main/default/objects/GoLives__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who was the project manager who oversaw this GoLive?</description>
    <inlineHelpText>Who was the project manager who oversaw this GoLive?</inlineHelpText>
    <label>Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>GoLives</relationshipName>
    <type>Lookup</type>
</CustomField>