force-app/main/default/objects/GoLives__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Number_of_Go_Live_Changes__c</columns>
    <columns>Go_Live_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>