force-app/main/default/objects/GoLives__c/listViews/CLM_View_of_Go_Lives.listView-meta.xml
<ListView>
    <fullName>CLM_View_of_Go_Lives</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Actual_GoLive_Date__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Project_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>includes</operation>
        <value>CLM</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>CLM</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>Conga</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>DocuSign</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>SpringCM</value>
    </filters>
    <label>CLM View of Go Lives</label>
</ListView>